@startuml
title SO DO LOP 3 TANG - QUAN TRI NGUOI DUNG

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHQuanLyNguoiDung #BFE8BA {
    - txtTimKiem: TextBox
    - grvDanhSachTaiKhoan: GridView
    - txtHoTen: TextBox
    - txtSDT: TextBox
    - txtEmail: TextBox
    - txtTenDangNhap: TextBox
    - txtMatKhauTam: TextBox
    - lstVaiTro: ListBox
    - lstChiNhanh: ListBox
    - lstTrangThai: ListBox
    - btnThem: Button
    - btnSua: Button
    - btnKhoa: Button
    - btnDatLaiMatKhau: Button
    --
    + HienThi()
    + btnThem_Click()
    + btnSua_Click()
    + btnKhoa_Click()
    + btnDatLaiMatKhau_Click()
  }

}

package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class QuanLyNguoiDung #F4E3A2 {
    + LayDanhSach(): IReadOnlyList<TaiKhoan>
    + LayDanhSachChiNhanh(): IReadOnlyList<ChiNhanh>
    + Tao(taiKhoan: TaiKhoan, nhanVien: NhanVien, matKhauTam: String): TaiKhoan
    + CapNhat(taiKhoan: TaiKhoan, nhanVien: NhanVien)
    + DoiTrangThai(maTK: String, trangThai: String, maTKThucHien: String)
    + DatLaiMatKhau(maTK: String, matKhauTam: String)
  }

  class TaiKhoan #F4E3A2 {
    - MaTK: String
    - TenDangNhap: String
    - MatKhauHash: String
    - TrangThai: String
    - Email: String
    - MaNV: String
    --
    + DoiMatKhau(hash: String)
    + Doc(maTK: String): TaiKhoan
    + LayDanhSach(): IReadOnlyList<TaiKhoan>
    + Them()
    + CapNhat()
    + CapNhatTrangThai()
    + DatMatKhau()
  }

  class NhanVien #F4E3A2 {
    - MaNV: String
    - HoTen: String
    - SDT: String
    - VaiTro: String
    - MaCN: String
    --
    + Them()
    + CapNhat()
  }

  class ChiNhanh #F4E3A2 {
    - MaCN: String
    - TenChiNhanh: String
    --
    + LayDanhSach(): IReadOnlyList<ChiNhanh>
  }
}

package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class TaiKhoanDB #BFDCF0 {
    + Doc(maTK: String): TaiKhoan
    + LayDanhSach(): IReadOnlyList<TaiKhoan>
    + Them(taiKhoan: TaiKhoan)
    + CapNhat(taiKhoan: TaiKhoan)
    + CapNhatTrangThai(maTK: String, trangThai: String)
    + DatMatKhau(taiKhoan: TaiKhoan)
  }

  class NhanVienDB #BFDCF0 {
    + Them(nhanVien: NhanVien)
    + CapNhat(nhanVien: NhanVien)
  }

  class ChiNhanhDB #BFDCF0 {
    + LayDanhSach(): IReadOnlyList<ChiNhanh>
  }
}

' Giao dien su dung use case.
MHQuanLyNguoiDung o-- QuanLyNguoiDung

' Lop dieu phoi tap hop cac lop nghiep vu lien quan.
QuanLyNguoiDung o-- TaiKhoan : quan ly
QuanLyNguoiDung o-- NhanVien : quan ly
QuanLyNguoiDung o-- ChiNhanh : tra cuu
TaiKhoan "0..*" -- "1" NhanVien : thuoc

' Aggregation giua business va data access.
TaiKhoan o-- TaiKhoanDB
NhanVien o-- NhanVienDB
ChiNhanh o-- ChiNhanhDB

GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
QuanLyNguoiDung -[hidden]down- TaiKhoanDB
ChiNhanh -[hidden]down- TaiKhoanDB
@enduml
